AyushP -> dashboard-center (not complete)

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -30,6 +30,9 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    
+    <!--  Font awesome   -->
+    <script src="https://kit.fontawesome.com/5ba62af6e4.js" crossorigin="anonymous"></script>
     <title>React App</title>
   </head>
   <body>
