--- a/client/public/index.html
+++ b/client/public/index.html
@@ -31,7 +31,7 @@
       crossorigin="anonymous"
     />
     <script src="https://kit.fontawesome.com/5ba62af6e4.js" crossorigin="anonymous"></script>
-    <title>React App</title>
+    <title>EXODUS | IEEE SBM</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
